# bokuchi

./: .gitignore  CHANGELOG.md  LICENSE  README.md  VERSION_UPDATE_CHECKLIST.md  build-macos-notarized.sh  build-macos-signed.sh  build-macos.sh  build-windows.sh  check-notarization.sh  eslint.config.js  notarize.sh  package-lock.json  package.json  vitest.config.ts  wdio.conf.ts
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: 1-bug-report.yml  2-feature-request.yml  3-other.yml  config.yml
.github/workflows/: auto-merge-dependabot.yml  dependabot-test.yml  issue-labeler.yml  release-linux.yml  release.yml  security-audit.yml  tauri-update-monitor.yml  unit-tests.yml
docs/: CROSS_COMPILE_TROUBLESHOOTING.md  MACOS_NOTARIZATION_GUIDE.md  MENU_SYSTEM_GUIDE.md  MONKEY_TEST_CASE.md  README.md  SECURITY.md  SECURITY_NOTES.md  TESTING.md  TEST_STRATEGY.md  VERSION_UPDATE_CHECKLIST.md
docs/ja/: CROSS_COMPILE_TROUBLESHOOTING.md  MACOS_NOTARIZATION_GUIDE.md  MENU_SYSTEM_GUIDE.md  MONKEY_TEST_CASE.md  README.md  SECURITY.md  TESTING.md  VERSION_UPDATE_CHECKLIST.md  monkey-test.md  unit_test_coverage_plan.md
scripts/: generate-latest-json.js  verify-updater-signing-key.sh
src/: App.tsx  i18n.ts  main.tsx  milestone.ts  setupMonaco.ts  test-utils.ts  whatsNew.ts
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  debug_log.rs  file_association.rs  file_operations.rs  lib.rs  pdf_export.rs  tests.rs  types.rs  variable_processor.rs
src-tauri/templates/: installer.nsi
src/__tests__/: App.test.tsx
src/api/: desktopApi.ts  storeApi.ts  updaterApi.ts  variableApi.ts
src/components/: AppContent.tsx  AppDialogs.tsx  AppHeader.tsx  Editor.tsx  EmptyState.tsx  FolderTreePanel.tsx  Help.tsx  InlineCellEditor.tsx  KonamiUnlockOverlay.tsx  MarkdownToolbar.tsx  MarpPreview.tsx  MilestoneDialog.tsx  OutlinePanel.tsx  Preview.tsx  RecentFilesDialog.tsx  RenameDialog.tsx  RenderingFeatureNotice.tsx  RinControls.tsx  SaveBeforeCloseDialog.tsx  SearchReplacePanel.tsx  Settings.tsx  StatusBar.tsx  TabBar.tsx  TableConversionDialog.tsx  TableEditModal.tsx  TypingGame.css  TypingGame.tsx  UpdateDialog.tsx  (+2 more)
(+208 files in other folders)
